--- a/index.html
+++ b/index.html
@@ -815,9 +815,9 @@
              <h3 class="text-xl font-bold text-[#343A40] mb-2">Let's Connect!</h3>
             <p class="mb-4 leading-relaxed">I'm always eager to dive deeper into challenging design problems or share war stories. If you're building the future, let's discuss how my passion for thoughtful, impactful design can contribute to your vision.</p>
             <div class="flex justify-center space-x-6 text-[#007BFF]">
-                <a href="#" class="hover:underline text-lg">Portfolio</a>
-                <a href="#" class="hover:underline text-lg">LinkedIn</a>
-                <a href="#" class="hover:underline text-lg">Email</a>
+                <a href="https://www.behance.net/uzair_ilyas_designs" class="hover:underline text-lg">Portfolio</a>
+                <a href="https://www.linkedin.com/in/muhammad-uzair-ilyas-a66412280/" class="hover:underline text-lg">LinkedIn</a>
+                <a href="muhammed.uzair.ilyas@gmail.com" class="hover:underline text-lg">Email</a>
             </div>
             <p class="text-sm mt-8 leading-relaxed">&copy; 2025 Uzair Ilyas. All Rights Reserved.</p>
         </div>
